--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.461.0",
     "next": "15.0.3",
+    "next-auth": "^4.24.10",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "yarn": "^1.22.22"
